[workspace]
resolver = "3"

members = [
    "modules/axalloc",
    "modules/axconfig",
    "modules/axdisplay",
    "modules/axdma",
    "modules/axdriver",
    "modules/axfs",
    "modules/axhal",
    "modules/axinput",
    "modules/axipi",
    "modules/axlog",
    "modules/axmm",
    "modules/axnet",
    "modules/axruntime",
    "modules/axsync",
    "modules/axtask",
    "modules/axplat-dyn",

    "api/axfeat",
    "api/arceos_api",
    "api/arceos_posix_api",

    "ulib/axstd",
    "ulib/axlibc",

    "examples/helloworld",
    "examples/helloworld-myplat",
    "examples/httpclient",
    "examples/httpserver",
    "examples/shell",
]

[workspace.package]
version = "0.3.0-preview.1"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/arceos"
repository = "https://github.com/arceos-org/arceos"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
axstd = { version = "=0.3.0-preview.1", path = "ulib/axstd" }
axlibc = { version = "=0.3.0-preview.1", path = "ulib/axlibc" }

arceos_api = { version = "=0.3.0-preview.1", path = "api/arceos_api" }
arceos_posix_api = { version = "=0.3.0-preview.1", path = "api/arceos_posix_api" }
axfeat = { version = "=0.3.0-preview.1", path = "api/axfeat" }

axalloc = { version = "=0.3.0-preview.1", path = "modules/axalloc" }
axconfig = { version = "=0.3.0-preview.1", path = "modules/axconfig" }
axdisplay = { version = "=0.3.0-preview.1", path = "modules/axdisplay" }
axdma = { version = "=0.3.0-preview.1", path = "modules/axdma" }
axdriver = { version = "=0.3.0-preview.1", path = "modules/axdriver" }
axfs = { version = "=0.3.0-preview.1", path = "modules/axfs" }
axhal = { version = "=0.3.0-preview.1", path = "modules/axhal" }
axinput = { version = "=0.3.0-preview.1", path = "modules/axinput" }
axipi = { version = "=0.3.0-preview.1", path = "modules/axipi" }
axlog = { version = "=0.3.0-preview.1", path = "modules/axlog" }
axmm = { version = "=0.3.0-preview.1", path = "modules/axmm" }
axnet = { version = "=0.3.0-preview.1", path = "modules/axnet" }
axruntime = { version = "=0.3.0-preview.1", path = "modules/axruntime" }
axsync = { version = "=0.3.0-preview.1", path = "modules/axsync" }
axtask = { version = "=0.3.0-preview.1", path = "modules/axtask" }
axplat-dyn = { version = "=0.3.0-preview.1",  path = "modules/axplat-dyn", default-features = false }

axallocator = { version = "0.1.3-preview.1", features = [
    "axerrno",
] }
axbacktrace = "0.1"
axdriver_base = "0.1.4-preview.3"
axdriver_block = "0.1.4-preview.3"
axdriver_display = "0.1.4-preview.3"
axdriver_input = "0.1.4-preview.3"
axdriver_net = "0.1.4-preview.3"
axdriver_pci = "0.1.4-preview.3"
axdriver_virtio = "0.1.4-preview.3"
axdriver_vsock = "0.1.4-preview.3"
axerrno = "0.2"
axfs-ng-vfs = "0.1"
axio = "0.3.0-pre.1"
axklib = "0.3"
axcpu = "0.3.0-preview.6"
axplat = "0.3.1-pre.5"
axplat-aarch64-bsta1000b = "0.3.1-pre.5"
axplat-aarch64-phytium-pi = "0.3.1-pre.5"
axplat-aarch64-qemu-virt = "0.3.1-pre.5"
axplat-aarch64-raspi = "0.3.1-pre.5"
axplat-loongarch64-qemu-virt = "0.3.1-pre.5"
axplat-riscv64-qemu-virt = "0.3.1-pre.5"
axplat-x86-pc = "0.3.1-pre.5"
axpoll = "0.1"
bindgen = "0.72"
cfg-if = "1.0"
chrono = { version = "0.4", default-features = false }
crate_interface = "0.1.4"
ctor_bare = "0.2"
event-listener = { version = "5.4.0", default-features = false }
kernel_guard = "0.1"
kspin = "0.1"
lazyinit = "0.2"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
lock_api = { version = "0.4", default-features = false }
log = "0.4"
memory_addr = "0.4"
page_table_multiarch = "0.6"
percpu = "0.2.3-preview.1"
scope-local = "0.1"
spin = "0.10"
