[workspace]
resolver = "3"

members = [
    "modules/axalloc",
    "modules/axconfig",
    "modules/axdisplay",
    "modules/axdma",
    "modules/axdriver",
    "modules/axfs",
    "modules/axfs-ng",
    "modules/axhal",
    "modules/axinput",
    "modules/axipi",
    "modules/axlog",
    "modules/axmm",
    "modules/axnet",
    "modules/axnet-ng",
    "modules/axruntime",
    "modules/axsync",
    "modules/axtask",

    "api/axfeat",
    "api/arceos_api",
    "api/arceos_posix_api",

    "ulib/axstd",
    "ulib/axlibc",

    "examples/helloworld",
    "examples/helloworld-myplat",
    "examples/httpclient",
    "examples/httpserver",
    "examples/shell",
]
default-members = [
    "modules/axalloc",
    "modules/axconfig",
    "modules/axdisplay",
    "modules/axdma",
    "modules/axdriver",
    "modules/axfs",
    "modules/axfs-ng",
    "modules/axhal",
    "modules/axinput",
    "modules/axipi",
    "modules/axlog",
    "modules/axmm",
    "modules/axnet",
    "modules/axnet-ng",
    "modules/axruntime",
    "modules/axsync",
    "modules/axtask",

    "api/axfeat",
    "api/arceos_api",
    "api/arceos_posix_api",

    "ulib/axstd",
    "ulib/axlibc",
]

[workspace.package]
version = "0.3.0-preview.3"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/arceos"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
axstd = { version = "=0.3.0-preview.3", path = "ulib/axstd" }
axlibc = { version = "=0.3.0-preview.3", path = "ulib/axlibc" }

arceos_api = { version = "=0.3.0-preview.3", path = "api/arceos_api" }
arceos_posix_api = { version = "=0.3.0-preview.3", path = "api/arceos_posix_api" }
axfeat = { version = "=0.3.0-preview.3", path = "api/axfeat" }

axalloc = { version = "=0.3.0-preview.3", path = "modules/axalloc" }
axconfig = { version = "=0.3.0-preview.3", path = "modules/axconfig" }
axdisplay = { version = "=0.3.0-preview.3", path = "modules/axdisplay" }
axdma = { version = "=0.3.0-preview.3", path = "modules/axdma" }
axdriver = { version = "=0.3.0-preview.3", path = "modules/axdriver" }
axfs = { version = "=0.3.0-preview.3", path = "modules/axfs" }
axfs-ng = { version = "=0.3.0-preview.3", path = "modules/axfs-ng" }
axhal = { version = "=0.3.0-preview.3", path = "modules/axhal" }
axinput = { version = "=0.3.0-preview.3", path = "modules/axinput" }
axipi = { version = "=0.3.0-preview.3", path = "modules/axipi" }
axlog = { version = "=0.3.0-preview.3", path = "modules/axlog" }
axmm = { version = "=0.3.0-preview.3", path = "modules/axmm" }
axnet = { version = "=0.3.0-preview.3", path = "modules/axnet" }
axnet-ng = { version = "=0.3.0-preview.3", path = "modules/axnet-ng" }
axplat-dyn = { version = "=0.3.0-preview.3", default-features = false }
axruntime = { version = "=0.3.0-preview.3", path = "modules/axruntime" }
axsync = { version = "=0.3.0-preview.3", path = "modules/axsync" }
axtask = { version = "=0.3.0-preview.3", path = "modules/axtask" }

axallocator = { version = "0.2", features = ["axerrno"] }
axbacktrace = "0.1"
axdriver_base = "0.1.4-preview.3"
axdriver_block = "0.1.4-preview.3"
axdriver_display = "0.1.4-preview.3"
axdriver_input = "0.1.4-preview.3"
axdriver_net = "0.1.4-preview.3"
axdriver_pci = "0.1.4-preview.3"
axdriver_virtio = "0.1.4-preview.3"
axdriver_vsock = "0.1.4-preview.3"
axerrno = "0.2"
axfs-ng-vfs = "0.1"
axio = "0.3.0-pre.1"
axklib = "0.3"
axcpu = "0.3.0-preview.8"
axplat = "0.3.1-pre.6"
axplat-aarch64-bsta1000b = "0.3.1-pre.6"
axplat-aarch64-phytium-pi = "0.3.1-pre.6"
axplat-aarch64-qemu-virt = "0.3.1-pre.6"
axplat-aarch64-raspi = "0.3.1-pre.6"
axplat-loongarch64-qemu-virt = "0.3.1-pre.6"
axplat-riscv64-qemu-virt = "0.3.1-pre.6"
axplat-x86-pc = "0.3.1-pre.6"
axpoll = "0.1"
bindgen = "0.72"
buddy-slab-allocator = "0.2"
cfg-if = "1.0"
chrono = { version = "0.4", default-features = false }
crate_interface = "0.3"
ctor_bare = "0.2"
event-listener = { version = "5.4.0", default-features = false }
kernel_guard = "0.1"
kspin = "0.1"
lazyinit = "0.2"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
lock_api = { version = "0.4", default-features = false }
log = "0.4"
memory_addr = "0.4"
page_table_multiarch = { version = "0.6", features = ["axerrno"] }
percpu = "0.2.3-preview.1"
scope-local = "0.1"
spin = "0.10"

[patch.crates-io]
kernel_guard = { path = "../../components/kernel_guard", version = "0.1.3" }
