[workspace]
resolver = "2"

members = [
    "modules/axalloc",
    "modules/axconfig",
    "modules/axdisplay",
    "modules/axdriver",
    "modules/axfs",
    "modules/axhal",
    "modules/axlog",
    "modules/axmm",
    "modules/axdma",
    "modules/axnet",
    "modules/axns",
    "modules/axruntime",
    "modules/axsync",
    "modules/axtask",
    "modules/axipi",

    "api/axfeat",
    "api/arceos_api",
    "api/arceos_posix_api",

    "ulib/axstd",
    "ulib/axlibc",

    "examples/helloworld",
    "examples/helloworld-myplat",
    "examples/httpclient",
    "examples/httpserver",
    "examples/shell",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/arceos"
repository = "https://github.com/arceos-org/arceos"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
axstd = { path = "ulib/axstd" }
axlibc = { path = "ulib/axlibc" }

arceos_api = { path = "api/arceos_api" }
arceos_posix_api = { path = "api/arceos_posix_api" }
axfeat = { path = "api/axfeat" }

axalloc = { path = "modules/axalloc" }
axconfig = { path = "modules/axconfig" }
axdisplay = { path = "modules/axdisplay" }
axdriver = { path = "modules/axdriver" }
axfs = { path = "modules/axfs" }
axhal = { path = "modules/axhal" }
axlog = { path = "modules/axlog" }
axmm = { path = "modules/axmm" }
axnet = { path = "modules/axnet" }
axns = { path = "modules/axns" }
axruntime = { path = "modules/axruntime" }
axsync = { path = "modules/axsync" }
axtask = { path = "modules/axtask" }
axdma = { path = "modules/axdma" }
axipi = { path = "modules/axipi" }

[profile.release]
lto = true

[patch.crates-io]
kspin = { git = "https://github.com/arceos-org/kspin", branch = "debin/update_kernel_gaurd"}
percpu = { git = "https://github.com/arceos-org/percpu", branch = "debin/update_kernel_gaurd"}
fxmac_rs = { git = "https://github.com/elliott10/fxmac_rs", branch = "main" }
axdriver_base = { git = "https://github.com/arceos-org/axdriver_crates.git", branch = "debin/update_virtio" }
axdriver_block = { git = "https://github.com/arceos-org/axdriver_crates.git", branch = "debin/update_virtio" }
axdriver_net = { git = "https://github.com/arceos-org/axdriver_crates.git", branch = "debin/update_virtio" }
axdriver_display = { git = "https://github.com/arceos-org/axdriver_crates.git", branch = "debin/update_virtio" }
axdriver_pci = { git = "https://github.com/arceos-org/axdriver_crates.git", branch = "debin/update_virtio" }
axdriver_virtio = { git = "https://github.com/arceos-org/axdriver_crates.git", branch = "debin/update_virtio" }