[package]
name = "arceos_api"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Public APIs and types for ArceOS modules"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/api/arceos_api"
documentation = "https://arceos-org.github.io/arceos/arceos_api/index.html"

[features]
default = []

irq = ["axfeat/irq"]
ipi = ["dep:axipi", "axfeat/ipi"]
alloc = ["dep:axalloc", "axfeat/alloc"]
paging = ["dep:axmm", "axfeat/paging"]
dma = ["dep:axdma", "axfeat/dma"]
multitask = ["axtask/multitask", "axsync/multitask", "axfeat/multitask"]
fs = ["dep:axfs", "dep:axdriver", "axfeat/fs"]
net = ["dep:axnet", "dep:axdriver", "axfeat/net"]
display = ["dep:axdisplay", "dep:axdriver", "axfeat/display"]

myfs = ["axfeat/myfs"]

# Use dummy functions if the feature is not enabled
dummy-if-not-enabled = []

[dependencies]
axalloc = { workspace = true, optional = true }
axconfig.workspace = true
axdisplay = { workspace = true, optional = true }
axdma = { workspace = true, optional = true }
axdriver = { workspace = true, optional = true }
axerrno.workspace = true
axfeat.workspace = true
axfs = { workspace = true, optional = true }
axhal.workspace = true
axio.workspace = true
axipi = { workspace = true, optional = true }
axlog.workspace = true
axmm = { workspace = true, optional = true }
axnet = { workspace = true, optional = true }
axruntime.workspace = true
axsync.workspace = true
axtask = { workspace = true, optional = true }
