[package]
name = "arceos_posix_api"
version.workspace = true
edition.workspace = true
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "wudashuai <wu-ds20@mails.tsinghua.edu.cn>",
    "yfblock <321353225@qq.com>",
    "scPointer <bhy18@mails.tsinghua.edu.cn>",
    "Shiping Yuan <robert_yuan@pku.edu.com>",
]
description = "POSIX-compatible APIs for ArceOS modules"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/api/arceos_posix_api"
include = ["src/**/*.rs", "Cargo.toml", "build.rs", "ctypes.h"]

[features]
default = []

smp = ["axfeat/smp"]
irq = ["axfeat/irq"]
alloc = ["dep:axalloc", "axfeat/alloc"]
multitask = ["axtask/multitask", "axfeat/multitask", "axsync/multitask"]
fd = ["alloc", "dep:scope-local"]
fs = ["dep:axfs", "axfeat/fs", "fd"]
net = ["dep:axnet", "axfeat/net", "fd"]
pipe = ["fd"]
select = ["fd"]
epoll = ["fd"]

[dependencies]
# ArceOS modules
axalloc = { workspace = true, optional = true }
axconfig.workspace = true
axfeat.workspace = true
axfs = { workspace = true, optional = true }
axhal.workspace = true
axlog.workspace = true
axnet = { workspace = true, optional = true }
axruntime.workspace = true
axsync.workspace = true
axtask = { workspace = true, optional = true }

# Other crates
axerrno.workspace = true
axio.workspace = true
flatten_objects = "0.2"
lazy_static.workspace = true
scope-local = { workspace = true, optional = true }
spin.workspace = true

[build-dependencies]
bindgen.workspace = true
