[package]
name = "arceos-c-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axruntime = { path = "../../modules/axruntime", features = ["alloc", "paging"] }
axalloc_c = { path = "../../modules/axalloc_c"}
