[package]
name = "arceos-memtest"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
axstd = { workspace = true, features = ["alloc"], optional = true }
