[package]
name = "alter_trap"
version = "0.1.0"
edition = "2021"
authors = ["scPointer <responsibilities@foxmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.10"

[dependencies]
kernel_guard = { path = "../kernel_guard"}
