[package]
name = "arm_pl011"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ARM Uart pl011 register definitions and basic operations"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/arm_pl011"
documentation = "https://rcore-os.github.io/arceos/arm_pl011/index.html"

[dependencies]
tock-registers = "0.8"