[package]
name = "arm_pl031"
version = "0.1.0"
edition = "2021"
authors = ["Keyang Hu <keyang.hu@qq.com>"]
description = "System Real Time Clock (RTC) Drivers for aarch64 based on PL031."
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/arceos/tree/main/crates/arm_pl031"
documentation = "https://docs.rs/arm_pl031"
keywords = ["arceos", "aarch64", "rtc"]
categories = ["os", "hardware-support", "no-std"]

[dependencies]
