[package]
name = "axerrno"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Error code definition used by ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/axerrno"
documentation = "https://rcore-os.github.io/arceos/axerrno/index.html"

[dependencies]
log = "0.4"
